k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: counter-api
  labels:
    name: counter-api
    app: counter-api
