k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-api-service
  namespace: counter-api
  labels:
    app: counter-api
    component: api
spec:
  selector:
    app: counter-api
  ports:
  - port: 80
    targetPort: 5000
    name: http
  type: ClusterIP
